@@ -1,7 +1,5 @@
 package uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.caseworker;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -34,7 +32,7 @@ import static uk.gov.hmcts.cmc.claimstore.services.ccd.Role.CASEWORKER;
 public class ResetAndSendNewPinCallbackHandler extends CallbackHandler {
 
     private static final List<Role> ROLES = Collections.singletonList(CASEWORKER);
-    private static final List<CaseEvent> EVENTS = ImmutableList.of(CaseEvent.RESET_PIN);
+    private static final List<CaseEvent> EVENTS = List.of(CaseEvent.RESET_PIN);
 
     private final Logger logger = LoggerFactory.getLogger(getClass());
 
@@ -69,7 +67,7 @@ public class ResetAndSendNewPinCallbackHandler extends CallbackHandler {
 
     @Override
     protected Map<CallbackType, Callback> callbacks() {
-        return ImmutableMap.of(
+        return Map.of(
             CallbackType.ABOUT_TO_SUBMIT, this::resendNewPin
         );
     }
@@ -93,7 +91,7 @@ public class ResetAndSendNewPinCallbackHandler extends CallbackHandler {
                 claim.getReferenceNumber());
 
             return AboutToStartOrSubmitCallbackResponse.builder()
-                .errors(ImmutableList.of("Claim has already been linked to defendant - cannot send notification"))
+                .errors(List.of("Claim has already been linked to defendant - cannot send notification"))
                 .build();
         }
 
@@ -102,7 +100,7 @@ public class ResetAndSendNewPinCallbackHandler extends CallbackHandler {
                 claim.getReferenceNumber());
 
             return AboutToStartOrSubmitCallbackResponse.builder()
-                .errors(ImmutableList.of("Claim doesn't have defendant email address - cannot send notification"))
+                .errors(List.of("Claim doesn't have defendant email address - cannot send notification"))
                 .build();
         }
 
